--- a/tienda.html
+++ b/tienda.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Tienda | Sistema Z</title>
+<title>Tienda · Miranda Flow</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 *{
@@ -16,28 +16,28 @@
 }
 
 body{
-  font-family:'Inter',system-ui;
   background:#000;
   color:#fff;
-  overflow-x:hidden;
+  font-family:'Inter',system-ui;
+  overflow:hidden;
 }
 
-/* ===== FONDO ===== */
+/* ===== FONDO LUJO ===== */
 .bg{
   position:fixed;
   inset:-20%;
   background:
-    radial-gradient(900px 600px at 20% 20%, rgba(255,255,255,.06), transparent 60%),
-    radial-gradient(900px 600px at 80% 80%, rgba(0,200,255,.07), transparent 65%);
-  filter:blur(26px);
+    radial-gradient(900px 600px at 30% 20%, rgba(255,255,255,.08), transparent 60%),
+    radial-gradient(900px 600px at 80% 80%, rgba(255,215,0,.08), transparent 65%);
+  filter:blur(40px);
   z-index:-1;
 }
 
 /* ===== FLECHA SISTEMA Z ===== */
 .back{
   position:fixed;
-  top:18px;
-  left:18px;
+  top:20px;
+  left:20px;
   width:46px;
   height:46px;
   border-radius:14px;
@@ -47,115 +47,110 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  text-decoration:none;
   color:#fff;
+  text-decoration:none;
   font-size:20px;
-  z-index:50;
-  transition:.2s;
-}
-.back:hover{
-  background:rgba(255,255,255,.22);
-  transform:translateX(-2px);
+  z-index:10;
 }
 
 /* ===== HEADER ===== */
 header{
-  padding:90px 20px 50px;
   text-align:center;
+  padding-top:90px;
 }
 
 header h1{
-  font-size:38px;
-  font-weight:700;
+  font-family:'Playfair Display',serif;
+  font-size:42px;
+  letter-spacing:2px;
 }
 
 header p{
-  margin-top:12px;
-  font-size:15px;
+  margin-top:10px;
+  font-size:14px;
   color:rgba(255,255,255,.6);
+  letter-spacing:2px;
 }
 
-/* ===== SECCIONES (ENTRADA) ===== */
-.sections{
-  max-width:1200px;
-  margin:0 auto;
-  padding:20px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:30px;
-}
-
-.section-btn{
-  height:220px;
-  border-radius:28px;
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.18);
-  backdrop-filter:blur(18px);
+/* ===== SLIDER ===== */
+.slider{
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:65%;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:20px;
-  font-weight:600;
-  letter-spacing:.4px;
-  cursor:pointer;
-  transition:.35s cubic-bezier(.2,.8,.2,1);
 }
 
-.section-btn:hover{
-  transform:translateY(-10px) scale(1.03);
-  border-color:rgba(255,255,255,.35);
+.track{
+  display:flex;
+  gap:80px;
+  transition:transform .8s cubic-bezier(.22,.8,.22,1);
 }
 
-/* ===== VISTAS INTERNAS ===== */
-.view{
-  display:none;
-  padding:90px 20px 140px;
-}
-
-.view.active{
-  display:block;
-}
-
-.view h2{
-  text-align:center;
-  font-size:32px;
-  font-weight:600;
-  margin-bottom:40px;
-}
-
-/* ===== GRID INVENTARIO ===== */
-.grid{
-  max-width:1400px;
-  margin:0 auto;
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:26px;
-}
-
-.item{
-  height:240px;
-  border-radius:26px;
-  background:rgba(255,255,255,.07);
+.card{
+  width:280px;
+  height:360px;
+  border-radius:40px;
+  background:rgba(255,255,255,.06);
   border:1px solid rgba(255,255,255,.18);
-  backdrop-filter:blur(18px);
+  backdrop-filter:blur(20px);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-family:'Playfair Display',serif;
+  font-size:26px;
+  letter-spacing:2px;
+  cursor:pointer;
+  transition:.6s;
+}
+
+.card.active{
+  transform:scale(1.15);
+  border-color:rgba(255,215,0,.6);
+  box-shadow:0 40px 120px rgba(255,215,0,.15);
+}
+
+.card span{
+  opacity:.85;
+}
+
+/* ===== FLECHAS ===== */
+.nav{
+  position:fixed;
+  bottom:40px;
+  width:100%;
+  display:flex;
+  justify-content:space-between;
+  padding:0 40px;
+  pointer-events:none;
+}
+
+.arrow{
+  pointer-events:auto;
+  width:56px;
+  height:56px;
+  border-radius:50%;
+  background:rgba(255,255,255,.12);
+  backdrop-filter:blur(14px);
+  border:1px solid rgba(255,255,255,.25);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:24px;
+  cursor:pointer;
   transition:.3s;
 }
 
-.item:hover{
-  transform:translateY(-8px);
-  border-color:rgba(255,255,255,.35);
+.arrow:hover{
+  background:rgba(255,255,255,.25);
 }
 
 /* ===== RESPONSIVE ===== */
-@media(max-width:1200px){
-  .grid{grid-template-columns:repeat(3,1fr);}
-}
-@media(max-width:900px){
-  .grid{grid-template-columns:repeat(2,1fr);}
-}
-@media(max-width:520px){
-  .grid{grid-template-columns:1fr;}
-  header h1{font-size:30px}
+@media(max-width:768px){
+  .card{width:220px;height:300px;font-size:22px}
+  header h1{font-size:34px}
 }
 </style>
 </head>
@@ -164,71 +159,45 @@ header p{
 
 <div class="bg"></div>
 
-<!-- Flecha SIEMPRE A INDEX -->
 <a href="index.html" class="back">←</a>
 
 <header>
   <h1>Tienda</h1>
-  <p>Ecosistema · Inventario por secciones</p>
+  <p>Miranda Flow · Luxury Mode</p>
 </header>
 
-<!-- ENTRADA A SECCIONES -->
-<section id="menu" class="sections">
-  <div class="section-btn" onclick="openView('juri')">Juri</div>
-  <div class="section-btn" onclick="openView('pantalon')">Pantalón</div>
-  <div class="section-btn" onclick="openView('pulover')">Pulóver</div>
-  <div class="section-btn" onclick="openView('conjunto')">Conjunto</div>
-  <div class="section-btn" onclick="openView('short')">Short</div>
-</section>
-
-<!-- VISTAS INTERNAS -->
-
-<section id="juri" class="view">
-  <h2>Juri</h2>
-  <div class="grid">
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
+<div class="slider">
+  <div class="track" id="track">
+    <div class="card active"><span>JURI</span></div>
+    <div class="card"><span>PANTALÓN</span></div>
+    <div class="card"><span>PULÓVER</span></div>
+    <div class="card"><span>CONJUNTO</span></div>
+    <div class="card"><span>SHORT</span></div>
   </div>
-</section>
+</div>
 
-<section id="pantalon" class="view">
-  <h2>Pantalón</h2>
-  <div class="grid">
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
-  </div>
-</section>
-
-<section id="pulover" class="view">
-  <h2>Pulóver</h2>
-  <div class="grid">
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
-  </div>
-</section>
-
-<section id="conjunto" class="view">
-  <h2>Conjunto</h2>
-  <div class="grid">
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
-  </div>
-</section>
-
-<section id="short" class="view">
-  <h2>Short</h2>
-  <div class="grid">
-    <div class="item"></div><div class="item"></div>
-    <div class="item"></div><div class="item"></div>
-  </div>
-</section>
+<div class="nav">
+  <div class="arrow" onclick="prev()">‹</div>
+  <div class="arrow" onclick="next()">›</div>
+</div>
 
 <script>
-function openView(id){
-  document.getElementById('menu').style.display='none';
-  document.querySelectorAll('.view').forEach(v=>v.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
+let index = 0;
+const cards = document.querySelectorAll('.card');
+const track = document.getElementById('track');
+
+function update(){
+  cards.forEach(c=>c.classList.remove('active'));
+  cards[index].classList.add('active');
+  track.style.transform = translateX(${-index * 360}px);
+}
+
+function next(){
+  if(index < cards.length-1){ index++; update(); }
+}
+
+function prev(){
+  if(index > 0){ index--; update(); }
 }
 </script>
 
