--- a/tienda.html
+++ b/tienda.html
@@ -1,291 +1,271 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Tienda · Miranda Flow</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Tienda | Miranda Flow</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
-<style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-body{
-  font-family:'Inter',system-ui;
-  background:#f6f2ed;
-  color:#111;
-}
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f6f2ec;
+      color: #111;
+    }
 
-/* ===== HEADER ===== */
-header{
-  background:#fff;
-  padding:18px 26px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  position:sticky;
-  top:0;
-  z-index:10;
-  box-shadow:0 6px 30px rgba(0,0,0,.06);
-}
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
 
-.brand{
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
+    /* ===== HEADER ===== */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background: rgba(246,242,236,0.9);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+    }
 
-.brand img{
-  width:42px;
-  border-radius:10px;
-}
+    .nav {
+      max-width: 1200px;
+      margin: auto;
+      padding: 18px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-.brand span{
-  font-family:'Playfair Display',serif;
-  font-size:18px;
-  letter-spacing:1px;
-}
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      font-family: 'Playfair Display', serif;
+      font-size: 20px;
+      font-weight: 600;
+    }
 
-nav{
-  display:flex;
-  gap:24px;
-}
+    .brand img {
+      width: 38px;
+      height: 38px;
+      border-radius: 10px;
+    }
 
-nav a{
-  text-decoration:none;
-  color:#111;
-  font-size:14px;
-  letter-spacing:1px;
-}
+    .nav-links {
+      display: flex;
+      gap: 26px;
+      font-size: 14px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
 
-/* ===== HERO ===== */
-.hero{
-  display:grid;
-  grid-template-columns:1.2fr 1fr;
-  align-items:center;
-  padding:80px 8%;
-  background:linear-gradient(135deg,#e8dfd5,#f6f2ed);
-}
+    /* ===== BACK BUTTON ===== */
+    .back-btn {
+      position: fixed;
+      top: 90px;
+      left: 20px;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: rgba(0,0,0,0.08);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      transition: all .3s ease;
+      z-index: 20;
+    }
 
-.hero h1{
-  font-family:'Playfair Display',serif;
-  font-size:56px;
-  line-height:1.05;
-}
+    .back-btn:hover {
+      background: rgba(0,0,0,0.15);
+      transform: translateX(-3px);
+    }
 
-.hero p{
-  margin-top:20px;
-  font-size:16px;
-  max-width:420px;
-  color:#444;
-}
+    /* ===== HERO ===== */
+    .hero {
+      max-width: 1200px;
+      margin: auto;
+      padding: 80px 24px 40px;
+    }
 
-.hero .actions{
-  margin-top:30px;
-  display:flex;
-  gap:14px;
-}
+    .hero h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 52px;
+      font-weight: 600;
+      margin-bottom: 16px;
+    }
 
-.hero .actions a{
-  padding:14px 28px;
-  border-radius:40px;
-  font-size:14px;
-  letter-spacing:1px;
-  text-decoration:none;
-}
+    .hero p {
+      max-width: 520px;
+      font-size: 16px;
+      line-height: 1.6;
+      color: #444;
+    }
 
-.primary{
-  background:#111;
-  color:#fff;
-}
+    /* ===== CATEGORIES ===== */
+    .categories {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 24px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+    }
 
-.secondary{
-  border:1px solid #111;
-  color:#111;
-}
+    .category {
+      background: #fff;
+      border-radius: 20px;
+      padding: 26px;
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 18px;
+      transition: all .35s ease;
+      cursor: pointer;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.06);
+    }
 
-.hero-img{
-  width:100%;
-  height:420px;
-  border-radius:28px;
-  background:url('exclusive-1.jpg') center/cover no-repeat;
-}
+    .category:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 30px 60px rgba(0,0,0,0.12);
+    }
 
-/* ===== COLECCIONES ===== */
-.section{
-  padding:80px 8%;
-}
+    /* ===== PRODUCTS GRID ===== */
+    .products {
+      max-width: 1200px;
+      margin: auto;
+      padding: 60px 24px 100px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 28px;
+    }
 
-.section h2{
-  font-family:'Playfair Display',serif;
-  font-size:34px;
-  margin-bottom:30px;
-}
+    .card {
+      background: #fff;
+      border-radius: 26px;
+      padding: 20px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.08);
+      transition: all .4s ease;
+      opacity: 0;
+      transform: translateY(40px);
+      animation: fadeUp .8s forwards;
+    }
 
-.collections{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
-  gap:28px;
-}
+    .card:nth-child(2) { animation-delay: .1s; }
+    .card:nth-child(3) { animation-delay: .2s; }
+    .card:nth-child(4) { animation-delay: .3s; }
+    .card:nth-child(5) { animation-delay: .4s; }
 
-.collection{
-  background:#fff;
-  border-radius:24px;
-  padding:20px;
-  text-align:center;
-  transition:.4s;
-  cursor:pointer;
-}
+    @keyframes fadeUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-.collection:hover{
-  transform:translateY(-6px);
-  box-shadow:0 30px 80px rgba(0,0,0,.12);
-}
+    .card img {
+      width: 100%;
+      border-radius: 18px;
+      margin-bottom: 16px;
+    }
 
-.collection img{
-  width:100%;
-  height:160px;
-  object-fit:cover;
-  border-radius:18px;
-}
+    .card h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 18px;
+      margin-bottom: 6px;
+    }
 
-.collection h3{
-  margin-top:14px;
-  font-size:15px;
-  letter-spacing:1px;
-}
+    .card span {
+      font-size: 13px;
+      color: #777;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
 
-/* ===== PRODUCTOS ===== */
-.products{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:30px;
-}
+    /* ===== FOOTER SPACE ===== */
+    footer {
+      height: 80px;
+    }
 
-.product{
-  background:#fff;
-  border-radius:26px;
-  overflow:hidden;
-  transition:.4s;
-}
-
-.product:hover{
-  transform:translateY(-8px);
-  box-shadow:0 40px 100px rgba(0,0,0,.15);
-}
-
-.product img{
-  width:100%;
-  height:260px;
-  object-fit:cover;
-}
-
-.product-info{
-  padding:18px;
-}
-
-.product-info h4{
-  font-size:15px;
-  margin-bottom:6px;
-}
-
-.product-info span{
-  font-size:14px;
-  color:#777;
-}
-
-/* ===== FOOTER ===== */
-footer{
-  padding:40px;
-  text-align:center;
-  font-size:13px;
-  color:#666;
-}
-</style>
+    /* ===== RESPONSIVE ===== */
+    @media (max-width: 600px) {
+      .hero h1 {
+        font-size: 38px;
+      }
+    }
+  </style>
 </head>
-
 <body>
 
-<header>
-  <div class="brand">
-    <img src="logo.jpg">
-    <span>Miranda Flow</span>
-  </div>
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="carrito.html">Carrito</a>
-  </nav>
-</header>
+  <!-- BACK -->
+  <a href="index.html" class="back-btn">←</a>
 
-<section class="hero">
-  <div>
-    <h1>Estilo que<br>impone presencia</h1>
+  <!-- HEADER -->
+  <header>
+    <div class="nav">
+      <div class="brand">
+        <img src="logo.jpg" alt="Miranda Flow">
+        Miranda Flow
+      </div>
+      <nav class="nav-links">
+        <a href="index.html">Inicio</a>
+        <a href="carrito.html">Carrito</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Tienda</h1>
     <p>
-      Colecciones seleccionadas. Diseño, nivel y carácter.
-      Esto no es fast fashion. Es identidad.
+      No es una tienda tradicional.  
+      Es una extensión del ecosistema Miranda Flow.  
+      Cada sección representa una colección, una presencia, un nivel.
     </p>
-    <div class="actions">
-      <a href="#colecciones" class="primary">Ver colecciones</a>
-      <a href="#productos" class="secondary">Destacados</a>
+  </section>
+
+  <!-- CATEGORIES -->
+  <section class="categories">
+    <div class="category">Hoodies</div>
+    <div class="category">Pantalones</div>
+    <div class="category">Pullovers</div>
+    <div class="category">Conjuntos</div>
+    <div class="category">Shorts</div>
+  </section>
+
+  <!-- PRODUCTS (MAQUETA) -->
+  <section class="products">
+    <div class="card">
+      <img src="exclusive-1.jpg" alt="">
+      <h3>Pieza Conceptual</h3>
+      <span>Miranda Flow</span>
     </div>
-  </div>
-  <div class="hero-img"></div>
-</section>
-
-<section class="section" id="colecciones">
-  <h2>Nuestras colecciones</h2>
-  <div class="collections">
-    <div class="collection"><img src="exclusive-1.jpg"><h3>Hoodies</h3></div>
-    <div class="collection"><img src="exclusive-2.jpg"><h3>Pantalones</h3></div>
-    <div class="collection"><img src="exclusive-3.jpg"><h3>Conjuntos</h3></div>
-    <div class="collection"><img src="exclusive-4.jpg"><h3>Shorts</h3></div>
-  </div>
-</section>
-
-<section class="section" id="productos">
-  <h2>Piezas destacadas</h2>
-  <div class="products">
-    <div class="product">
-      <img src="exclusive-1.jpg">
-      <div class="product-info">
-        <h4>Hoodie Signature</h4>
-        <span>Edición limitada</span>
-      </div>
+    <div class="card">
+      <img src="exclusive-2.jpg" alt="">
+      <h3>Edición Selecta</h3>
+      <span>Próximamente</span>
     </div>
-
-    <div class="product">
-      <img src="exclusive-2.jpg">
-      <div class="product-info">
-        <h4>Pantalón Premium</h4>
-        <span>Corte exclusivo</span>
-      </div>
+    <div class="card">
+      <img src="exclusive-3.jpg" alt="">
+      <h3>Drop Ecosistema</h3>
+      <span>Demo Visual</span>
     </div>
-
-    <div class="product">
-      <img src="exclusive-3.jpg">
-      <div class="product-info">
-        <h4>Conjunto Flow</h4>
-        <span>Presencia total</span>
-      </div>
+    <div class="card">
+      <img src="exclusive-4.jpg" alt="">
+      <h3>Colección Nivel</h3>
+      <span>Concepto</span>
     </div>
+  </section>
 
-    <div class="product">
-      <img src="exclusive-4.jpg">
-      <div class="product-info">
-        <h4>Short Urbano</h4>
-        <span>Street luxury</span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer>
-  © Miranda Flow · Sistema Z
-</footer>
+  <footer></footer>
 
 </body>
 </html>
