--- a/producto.html
+++ b/producto.html
@@ -1,227 +1,279 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Producto | Miranda Flow Boutique</title>
+  <meta charset="UTF-8">
+  <title>Pieza | Miranda Flow</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{
-  font-family:'Inter',sans-serif;
-  background:#000;
-  color:#fff;
-  overflow-x:hidden;
-}
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-/* Glow background */
-.bg{
-  position:fixed;
-  inset:-30%;
-  background:
-    radial-gradient(900px 500px at 20% 10%, rgba(0,120,255,.15), transparent),
-    radial-gradient(800px 500px at 80% 80%, rgba(0,255,180,.12), transparent);
-  filter:blur(120px);
-  z-index:-1;
-}
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f6f2ec;
+      color: #111;
+    }
 
-/* Header */
-header{
-  position:fixed;
-  top:0;left:0;width:100%;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:20px 32px;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(16px);
-  border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:10;
-}
-.brand{
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-.brand img{
-  width:42px;
-  height:42px;
-  border-radius:10px;
-}
-.brand span{
-  font-weight:800;
-  letter-spacing:.2em;
-  font-size:.75rem;
-  opacity:.85;
-}
-.nav{
-  display:flex;
-  gap:28px;
-}
-.nav a{
-  color:#fff;
-  text-decoration:none;
-  font-size:.85rem;
-  letter-spacing:.12em;
-  opacity:.75;
-  transition:.3s;
-}
-.nav a:hover{opacity:1}
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
 
-/* Back button */
-.back{
-  position:fixed;
-  top:92px;
-  left:24px;
-  width:46px;
-  height:46px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:rgba(255,255,255,.08);
-  backdrop-filter:blur(10px);
-  font-size:1.2rem;
-  cursor:pointer;
-  transition:.3s;
-  z-index:5;
-}
-.back:hover{background:rgba(255,255,255,.18)}
+    /* ===== HEADER ===== */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background: rgba(246,242,236,0.9);
+      backdrop-filter: blur(12px);
+      border-bottom: 1px solid rgba(0,0,0,0.06);
+    }
 
-/* Product layout */
-.main{
-  padding:160px 10vw 120px;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:80px;
-}
-@media(max-width:900px){
-  .main{grid-template-columns:1fr}
-}
+    .nav {
+      max-width: 1200px;
+      margin: auto;
+      padding: 18px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-/* Image */
-.product-img{
-  background:rgba(255,255,255,.04);
-  border-radius:32px;
-  padding:40px;
-}
-.product-img img{
-  width:100%;
-  border-radius:24px;
-}
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      font-family: 'Playfair Display', serif;
+      font-size: 20px;
+      font-weight: 600;
+    }
 
-/* Info */
-.info h1{
-  font-size:clamp(2.2rem,4vw,3.5rem);
-  font-weight:800;
-  letter-spacing:.15em;
-}
-.info p{
-  margin-top:18px;
-  opacity:.7;
-  line-height:1.7;
-  max-width:520px;
-}
+    .brand img {
+      width: 38px;
+      height: 38px;
+      border-radius: 10px;
+    }
 
-/* Tags */
-.tags{
-  display:flex;
-  gap:12px;
-  margin:26px 0;
-  flex-wrap:wrap;
-}
-.tag{
-  padding:8px 16px;
-  border-radius:999px;
-  background:rgba(255,255,255,.08);
-  font-size:.7rem;
-  letter-spacing:.14em;
-}
+    .nav-links {
+      display: flex;
+      gap: 26px;
+      font-size: 14px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
 
-/* Actions */
-.actions{
-  margin-top:32px;
-  display:flex;
-  gap:18px;
-  flex-wrap:wrap;
-}
-.actions a{
-  padding:14px 26px;
-  border-radius:999px;
-  text-decoration:none;
-  font-size:.75rem;
-  letter-spacing:.14em;
-  transition:.3s;
-}
-.primary{
-  background:#fff;
-  color:#000;
-}
-.primary:hover{opacity:.85}
-.secondary{
-  border:1px solid rgba(255,255,255,.3);
-  color:#fff;
-}
-.secondary:hover{
-  background:#fff;
-  color:#000;
-}
+    /* ===== BACK BUTTON ===== */
+    .back-btn {
+      position: fixed;
+      top: 90px;
+      left: 20px;
+      width: 46px;
+      height: 46px;
+      border-radius: 50%;
+      background: rgba(0,0,0,0.08);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      transition: all .3s ease;
+      z-index: 20;
+    }
 
-/* Footer spacing */
-footer{height:120px}
-</style>
+    .back-btn:hover {
+      background: rgba(0,0,0,0.15);
+      transform: translateX(-4px);
+    }
+
+    /* ===== MAIN ===== */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 100px 24px 120px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 60px;
+      align-items: center;
+    }
+
+    /* IMAGE */
+    .product-image {
+      background: #fff;
+      border-radius: 30px;
+      padding: 30px;
+      box-shadow: 0 40px 80px rgba(0,0,0,0.12);
+      animation: fadeIn 1s ease forwards;
+    }
+
+    .product-image img {
+      width: 100%;
+      border-radius: 22px;
+    }
+
+    /* INFO */
+    .product-info {
+      animation: fadeUp 1s ease forwards;
+    }
+
+    .product-info h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 44px;
+      font-weight: 600;
+      margin-bottom: 20px;
+    }
+
+    .product-info p {
+      font-size: 16px;
+      line-height: 1.7;
+      color: #444;
+      max-width: 460px;
+      margin-bottom: 26px;
+    }
+
+    .tags {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      margin-bottom: 34px;
+    }
+
+    .tag {
+      padding: 8px 14px;
+      border-radius: 999px;
+      background: rgba(0,0,0,0.06);
+      font-size: 12px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
+
+    .actions {
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap;
+    }
+
+    .btn-primary {
+      padding: 16px 30px;
+      border-radius: 999px;
+      background: #111;
+      color: #fff;
+      font-size: 14px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      border: none;
+      cursor: pointer;
+      transition: all .3s ease;
+    }
+
+    .btn-primary:hover {
+      background: #000;
+      transform: translateY(-2px);
+    }
+
+    .btn-secondary {
+      padding: 16px 30px;
+      border-radius: 999px;
+      background: transparent;
+      border: 1px solid rgba(0,0,0,0.3);
+      font-size: 14px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: all .3s ease;
+    }
+
+    .btn-secondary:hover {
+      background: rgba(0,0,0,0.05);
+    }
+
+    /* ===== ANIMATIONS ===== */
+    @keyframes fadeUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* ===== RESPONSIVE ===== */
+    @media (max-width: 900px) {
+      .container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+      }
+
+      .product-info h1 {
+        font-size: 36px;
+      }
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="bg"></div>
+  <!-- BACK -->
+  <a href="tienda.html" class="back-btn">←</a>
 
-<header>
-  <div class="brand">
-    <img src="logo.jpg" alt="Miranda Flow">
-    <span>BOUTIQUE · MIRANDA FLOW</span>
-  </div>
-  <nav class="nav">
-    <a href="index.html">INICIO</a>
-    <a href="tienda.html">TIENDA</a>
-    <a href="carrito.html">CARRITO</a>
-  </nav>
-</header>
+  <!-- HEADER -->
+  <header>
+    <div class="nav">
+      <div class="brand">
+        <img src="logo.jpg" alt="Miranda Flow">
+        Miranda Flow
+      </div>
+      <nav class="nav-links">
+        <a href="index.html">Inicio</a>
+        <a href="carrito.html">Carrito</a>
+      </nav>
+    </div>
+  </header>
 
-<a href="tienda.html" class="back">←</a>
+  <!-- CONTENT -->
+  <main class="container">
 
-<section class="main">
-
-  <div class="product-img">
-    <img src="exclusive-1.jpg" alt="Producto">
-  </div>
-
-  <div class="info">
-    <h1>PIEZA EXCLUSIVA</h1>
-
-    <p>
-      Prenda de muestra del ecosistema Miranda Flow.  
-      No es solo ropa: es presencia, nivel y entrada a un sistema.
-    </p>
-
-    <div class="tags">
-      <div class="tag">EDICIÓN LIMITADA</div>
-      <div class="tag">BOUTIQUE</div>
-      <div class="tag">SISTEMA Z</div>
+    <!-- IMAGE -->
+    <div class="product-image">
+      <img src="exclusive-1.jpg" alt="Pieza Miranda Flow">
     </div>
 
-    <div class="actions">
-      <a href="tienda.html" class="primary">VOLVER A TIENDA →</a>
-      <a href="carrito.html" class="secondary">AGREGAR AL CARRITO</a>
+    <!-- INFO -->
+    <div class="product-info">
+      <h1>Pieza Exclusiva</h1>
+      <p>
+        Esta prenda no es parte de una moda pasajera.  
+        Representa presencia, carácter y entrada a un ecosistema.
+        Miranda Flow no vende ropa: establece nivel.
+      </p>
+
+      <div class="tags">
+        <div class="tag">Edición limitada</div>
+        <div class="tag">Sistema Z</div>
+        <div class="tag">Boutique</div>
+      </div>
+
+      <div class="actions">
+        <button class="btn-primary">Añadir al carrito</button>
+        <a href="tienda.html" class="btn-secondary">Volver a tienda</a>
+      </div>
     </div>
-  </div>
 
-</section>
-
-<footer></footer>
+  </main>
 
 </body>
 </html>
